[gd_scene load_steps=5 format=2]

[ext_resource path="res://menus/Username.gd" type="Script" id=1]
[ext_resource path="res://menus/elianto_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://menus/elianto_32.tres" type="DynamicFont" id=3]
[ext_resource path="res://menus/elianto_20.tres" type="DynamicFont" id=4]

[node name="Username" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource( 1 )

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 30.0

[node name="Label" type="Label" parent="VSplitContainer"]
margin_left = 58.0
margin_right = 485.0
margin_bottom = 48.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Enter a username:"

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_left = 111.0
margin_top = 81.0
margin_right = 433.0
margin_bottom = 254.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="username_field" type="LineEdit" parent="VSplitContainer/VBoxContainer"]
margin_right = 322.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )

[node name="OkButton" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 322.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "Ok"

[node name="Label2" type="Label" parent="VSplitContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 322.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 4 )
text = "Please remember this username
if you want to play again"

[node name="Back" type="Button" parent="VSplitContainer/VBoxContainer"]
margin_left = 117.0
margin_top = 135.0
margin_right = 205.0
margin_bottom = 173.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
text = "Back"

[connection signal="text_changed" from="VSplitContainer/VBoxContainer/username_field" to="." method="_on_username_field_text_changed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/Back" to="." method="_on_Back_pressed"]
